# Genshin_Impact_bot

./: .gitignore  CHANGELOG.md  README.md  __init__.py  config.json  config.py  database.py  gacha.py  pyproject.toml  requirements.txt
almanac/: __init__.py  almanac.py  draw_lots.py  tweaks.py
almanac/assets/: config.json  lots_list.json
artifact_collect/: Artifact.py  __init__.py  artifact_collect.py  artifact_list.json  json_rw.py
artifact_rate/: __init__.py  artifact_eval.py
doc/: 命令.md  安装指南.md  演示.md  自定义.md
gacha/: __init__.py  config.json  gacha.py  pool_data.py
help/: __init__.py
material_remind/: __init__.py
qiu_qiu_translation/: __init__.py  qiu_qiu_dictionary.json  qiu_qiu_translation.py
query_resource_points/: __init__.py  query_resource_points.py
seek_god_eye/: __init__.py  seek_god_eye.py
src/: asset_index.py  asset_manager.py  config.py  database.py  downloader.py  utils.py
src/almanac/: __init__.py  almanac.py  draw_lots.py  tweaks.py  utils.py
src/almanac/assets/: almanac_list.json  config.json  lots_list.json
src/artifact_collect/: Artifact.py  __init__.py  artifact_list.json  artifact_property.json  json_rw.py  property_list.json
src/artifact_rate/: __init__.py  artifact_eval.py
src/gacha/: __init__.py  gacha.py  pool_data.py
src/material_remind/: __init__.py
src/qiu_qiu_translation/: __init__.py  qiu_qiu_dictionary.json  qiu_qiu_translation.py
src/query_resource_points/: __init__.py  query_resource_points.py
